# ChangeLog for media-tv/mythtv
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.347 2012/06/22 19:26:41 cardoe Exp $

  22 Jun 2012; Doug Goldstein <cardoe@gentoo.org> mythtv-0.25.1.ebuild:
  Fix issue where docs are no longer present.

  21 Jun 2012; Doug Goldstein <cardoe@gentoo.org> mythtv-0.25.1.ebuild,
  metadata.xml:
  Change USE=ass to USE=libass to be consistent with other usages of it in the
  tree. Fix patch name.

  21 Jun 2012; Doug Goldstein <cardoe@gentoo.org> mythtv-0.25.1.ebuild:
  qt3support is no longer necessary for Qt, but dbus and mysql is. Remove the
  requirement on nvidia-drivers being installed for vdpau support since
  multiple drivers implement vdpau and all we really need is libvdpau to
  utilize them.

  21 Jun 2012; Doug Goldstein <cardoe@gentoo.org> mythtv-0.25.1.ebuild,
  +files/fixLdconfSandbox.0.25.1.patch:
  Add missing patch for dealing with upstream's urge to always run ldconfig,
  which causes sandbox violations.

  21 Jun 2012; Doug Goldstein <cardoe@gentoo.org> mythtv-0.25.1.ebuild:
  Python, EROOT/ED cleanups and depend cleanups

*mythtv-0.25.1 (21 Jun 2012)

  21 Jun 2012; Doug Goldstein <cardoe@gentoo.org> +mythtv-0.25.1.ebuild,
  +files/mythbackend.conf, +files/mythbackend.init:
  Version bump to 0.25.1. This is still very much a Work In Progress ebuild and
  as such its masked.

  10 Jun 2012; Richard Freeman <rich0@gentoo.org>
  -files/mythtv-0.21-ldconfig-sanxbox-fix.patch,
  -files/mythtv-0.22-x86-no-fpic.patch, -files/mythfilldatabase.cron,
  -files/mythtv.logrotate.d, -files/mythtv.png:
  Remove no longer used files. Fix 370883.

  09 Jun 2012; Zac Medico <zmedico@gentoo.org> mythtv-0.24.1_p20110524.ebuild:
  inherit user for enewuser

  07 Mar 2012; Doug Goldstein <cardoe@gentoo.org> -mythtv-0.23.1_p27077.ebuild:
  Remove old version

  07 Mar 2012; Davide Pesavento <pesa@gentoo.org>