@@ -13,6 +13,6 @@ AUX xinitrc 240 RMD160 9c0c1030aa65c8fd3f20501f45757515a9208a61 SHA1 11795aa8be5
 DIST mythtv-0.24.1_p20110524.tar.gz 69756131 RMD160 e42fd2350d2b0199805e4f6e62646c8d835f353b SHA1 db7a91f237cd64c0604e7ee1672b041c37fe5e06 SHA256 ea3e37258f8596c9186865289ffd8f9ece9fc80d28a2ded80bd008544138a863
 DIST mythtv-0.25.1.tar.bz2 31827158 RMD160 88a5ce19b4b04f4b28a08b39bd7265e0a0ddd6d8 SHA1 eae92975c7d4cfa085d819944e454521e2d96c4d SHA256 7638ffc547b62f2d6dd031c6f164ccb993387a7b4b6d9218cdd37594c1cca508
 EBUILD mythtv-0.24.1_p20110524.ebuild 9230 RMD160 936bf295882ef4c8b37f2e46c990380990a17f0d SHA1 2756a2c8bc20a4846360738c91d0bcc7e971bbfa SHA256 d5c246f523e234fa8e5202930448db67b91a808d5bb8c4a014ee9f182eed8402
-EBUILD mythtv-0.25.1.ebuild 7312 RMD160 103d66da571812b022a110970e0a2ac1ea1a5bd9 SHA1 d947958e962fa3d90d27992106d4876f22d3378a SHA256 4752699b1522b0fca4281ca2d9c4b9f25615acafe9eea243bd538c7aff14fee3
-MISC ChangeLog 68600 RMD160 52bc79b09a00091b2a3a5222fb416c82baea81a8 SHA1 9e0e2bf78d9d907a18265b40307548103d260f2c SHA256 4efea6441b973774ed438664731f8c830cae27baaeea9c8ee7ceeea70a16772b
+EBUILD mythtv-0.25.1.ebuild 7271 RMD160 647efb020e82dcea1a7a25b1d5c9e305593cced6 SHA1 fd6e2b74efe7f53585f1ab775372e495e316232f SHA256 44f2be7e9697bdf4b63d6cf2080bd1a8502f5848bd4b88fb979b6cadfeb5fac2
+MISC ChangeLog 68852 RMD160 6e4f5db60799638329759f2c32606ca85282fe5d SHA1 ce7ef4dc1a7da073a374aedf07f386bea6b76324 SHA256 4675e160467ecd3d963790e398be66ee4bc8f6b22e9ab639159f6db0b48f4d97
 MISC metadata.xml 3289 RMD160 b40c62d7aa34dda6794589d76ea7f94e51fc3722 SHA1 989841d69778564adf4c3388bd6b848a8a187f44 SHA256 0881602e05462b750278801edb09f48ab3d2feeaedefb52eb68348aa62e55663
