@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/mythtv/Attic/mythtv-0.25.1.ebuild,v 1.6 2012/06/22 19:26:41 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/mythtv/Attic/mythtv-0.25.1.ebuild,v 1.7 2012/06/23 03:19:18 cardoe Exp $
 
 EAPI=4
 
@@ -188,7 +188,7 @@ src_compile() {
 }
 
 src_install() {
-	einstall INSTALL_ROOT="${ED}" || die "install failed"
+	einstall || die "install failed"
 	dodoc AUTHORS FAQ UPGRADING  README
 
 	insinto /usr/share/mythtv/database
@@ -200,7 +200,6 @@ src_install() {
 	newconfd "${FILESDIR}"/mythbackend.conf mythbackend
 
 	dodoc keys.txt 
-	dohtml docs/*.html
 
 	keepdir /etc/mythtv
 	chown -R mythtv "${ED}"/etc/mythtv
