@@ -1,6 +1,11 @@
 # ChangeLog for media-tv/mythtv
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.347 2012/06/22 19:26:41 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.348 2012/06/23 03:19:18 cardoe Exp $
+
+  22 Jun 2012; Doug Goldstein <cardoe@gentoo.org> mythtv-0.25.1.ebuild:
+  Fix einstall call to not install into /. Remove installation of html docs
+  since they're missing too. Thanks to Myk Taylor <myk002@yahoo.com> for help
+  debugging this ebuild.
 
   22 Jun 2012; Doug Goldstein <cardoe@gentoo.org> mythtv-0.25.1.ebuild:
   Fix issue where docs are no longer present.
